# aws-ntfy-alerts

./: .codeclimate.yml  .gitignore  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: pipeline.yml  terraform.yml
.kiro/steering/: behavior.md
aws_ntfy_alerts/: handler.py
src/: __init__.py  handler.py
terraform/: lambda.tf  outputs.tf  providers.tf  secrets.tf  secrets.yaml.encrypted  ssm.tf  terraform.tfvars  variables.tf
tests/: __init__.py  test_handler.py
